fixing stretched images with defined height when displaying articles

--- a/src/web/static/css/one-page-app.css
+++ b/src/web/static/css/one-page-app.css
@@ -167,4 +167,5 @@
 }
 #article-content * {
   max-width: 100%;
+  height: unset;
 }
